inyoka/static/style/forum.css
/**
 * style.forum
 * ~~~~~~~~~~~
 *
 * The styles for the forum.
 *
 * :copyright: 2008 by Armin Ronacher, Benjamin Wiegand.
 * :license: GNU GPL.
 */

/*** General styles *********************************************************/

div.content {
    padding: 0;
    border: none;
}

/*** Index page / View forum ************************************************/

table.forum {
    margin: 0 0 10px 0;
}

table.forum td.topic, table.forum td.topic_count, table.forum td.post_count,
table.forum td.view_count {
	font-size: 0.9em;
}

table.forum td.topic p {
    margin: 0;
}

table.forum td.icon {
    background-color: #eee;
    border: 1px solid #ccc;
    width: 40px;
    text-align: center;
    vertical-align: middle;
}

table.forum tr.entry p.name {
    margin: 0;
    padding: 0 0 5px 0;
    font-weight: bold;
}

table.forum tr.entry td.forum {
    padding: 8px;
}

table.forum tr.entry p.description,
table.forum tr.entry p.subforums {
    font-size: 0.8em;
    margin: 0;
    padding: 4px 0 3px 5px;
}

table.forum th.view_count {
    text-align: center;
}

table.forum td.post_count, table.forum td.view_count,
table.forum td.topic_count {
    text-align: center;
    color: #888;
    width: 6%;
}

table.forum th.last_post, table.forum th.post_count, table.forum th.topic, table.forum th.view_count {
    text-align: center;
}

table.forum th.last_post, table.forum th.post_count, table.forum th.view_count {
    font-size:0.9em;
    font-weight:normal;
    padding:0px 3px;
}

table.forum td.last_post {
    text-align: right;
    width: 185px;
    font-size: 0.9em;
    padding: 5px 15px 5px 0;
}

table.forum a.pageselect {
    font-size: .8em;
    padding-top: 0;
    padding-bottom: 0;
}

table.forum tr.deleted {
    background-color: #eee;
    color: #444;
    font-style: italic;
}

table.forum a.collapse {
    float: right;
    width: 16px;
    height: 16px;
    display: block;
    margin-right: .5em;
    color: #673B1A;
}

table.forum a.collapse {
    background-image: url('../img/icons/small/collapse.png');
}

table.forum a.collapsed {
    background-image: url('../img/icons/small/expand.png');
}

table.forum thead td p.actions {
    margin: 0;
    padding: 0.3em 0 0.5em 0;
    font-size: 0.85em;
}

table.forum thead td div.pagination {
    padding-top: 3px;
}

table.forum thead td p.description {
    color: #666;
    font-size: 0.85em;
}

/*** View topic *************************************************************/

/* box at the top of posts */
.topic_box {
    background: #f8f8f8;
    border: 1px solid #ccc;
    margin-bottom: 10px;
}

.topic_box h2 {
    font-family: 'Verdana', 'Deja-Vu Sans', 'Bitstream Vera Sans', sans-serif;
    text-align: center;
    font-weight: bold;
    background: #f5f1e6 url('../img/table-header.png') repeat-x;
    margin: 0;
    font-size: 1em;
    padding: 0.3em 0;
    border-bottom: 1px solid #ccc;
}

.topic_box div {
    padding: 5px 10px 5px 10px;
    line-height: 170%;
    font-size: 0.85em;
}

.status_solved {
    background-repeat: no-repeat;
    background-image: url('../img/forum_solved.png');
    padding-left: 25px;
}

.status_unsolved {
    background-repeat: no-repeat;
    background-image: url('../img/forum_unsolved.png');
    padding-left: 25px;
}

table.topic {
}

/* deleted post */
table.topic tr.deleted {
    text-align: center;
    background-color: #eee;
    color: #444;
    font-style: italic;
}

/* author column of posts */
table.topic td.author {
    vertical-align: top;
    background: #eeeeee;
    border-right: 1px solid #cccccc;
    width: 150px;
}

table.topic td.author p {
    margin: 2px 0 5px 0;
    font-size: 0.8em;
    text-align: left;
}

table.topic td.author p.username a {
    margin: 3px 0 10px 0;
    font-size: 1.1em;
    color: black;
    font-weight: bold;
    text-decoration: none;
}

table.topic td.author img.avatar {
    margin: 10px 0 0 0;
    border: 1px solid #ccc;
    background-color: white;
}

table.topic td.author img.teamicon {
  position: absolute;
  left: 155px;
  float: right;
}

table.topic td.author p.member_title {
  line-height: 0.2em;
  font-size: 0.6em;
  margin-bottom: 15px;
}

/* text column of posts */
table.topic td.post {
    font-size: 0.9em;
    padding: 10px;
    vertical-align: top;
}

table.topic td.post div.text {
    overflow: auto;
}

table.topic td.post div.postinfo {
    font-size: 0.9em;
    background: #F4F4F4 url(../img/table-header-alternative.png); 
    margin: -10px -10px 10px -10px;
    padding: 6px 10px;
    border-bottom: 1px solid #CCC;
}

table.topic td.post div.signature { 
    margin: 20px 0 -5px 0;
    padding: 5px 0 0 0;
    border-top: 1px solid #AAA;
    color: #666;
    font-size: .9em;
    line-height: 140%;
}

table.topic td.post div.signature p {
    padding: 0 0 5px 0;
    margin: 0;
}


/* actions of a post */
table.topic td.post div.linklist {
    float: right;
}

.action {
    background-repeat: no-repeat;
    padding-left: 20px;
}

.action_split {
    background-image: url('../img/forum/split.png');
}

.action_move {
    background-image: url('../img/forum/move.png');
}

.action_unlock {
    background-image: url('../img/forum/unlock.png');
}

.action_lock {
    background-image: url('../img/forum/lock.png');
}
.action_restore {
    background-image: url('../img/forum/restore.png');
}
.action_delete {
    background-image: url('../img/forum/delete.png');
}
.action_hide {
    background-image: url('../img/forum/hide.png');
}
.action_reply {
    background-image: url('../img/forum/comment_add.png');
}
.action_subscribe {
    background-image: url('../img/forum/subscribe.png');
}
.action_unsolve {
    background-image: url('../img/forum/unsolve.png');
}
.action_solve {
    background-image: url('../img/forum/solve.png');
}
.action_report {
    background-image: url('../img/forum/report.png');
}
.action_review {
    background-image: url('../img/forum/review.png');
}
.action_edit {
    background-image: url('../img/forum/comment_edit.png');
}
.action_quote {
    background-image: url('../img/forum/quote.png');
}

form.poll {
    display: block;
    border: 1px solid #ccc;
    margin-bottom: 10px;
    padding: 10px 10px 10px 70px;
    background: white url(../img/poll.png) no-repeat 10px 10px;
}

form.poll ul {
    list-style: none;
    margin: 1em 0 1em 0;
    padding: 0;
}

table.poll {
  border: 0;    
  width: auto;
}

table.poll td {
  border: 0;
  padding: 0 2.5em 0 0;
}

table.poll td.vote_bar {
  min-width: 100px;
}

table.poll td.vote_bar div {
  background-color: #EAD1A2;
  height: 0.7em;
}

table.poll td.sum {
  text-align: center;
  font-weight: bold;
}

div.forum_offset_pagination {
    float: none;
    margin: 0;
    font-size: 0.85em;
    border: 1px solid #ccc;
    padding: 10px;
}

form.post_editor {
    display: block;
    border: 1px solid #ccc;
    margin-bottom: 10px;
    padding: 10px 10px 10px 70px;
    background: white url(../img/editoremblem.png) no-repeat 10px 10px;
}

form.post_editor h2 {
    margin: 10px 0 10px 0;
}

form.post_editor dt.text {
    display: none;
}

form.post_editor dd.text {
    margin: 10px 0 10px 0;
}

form.post_editor dd.text textarea {
    height: 250px;
}

form.post_editor dt.collapse_enabled {
    cursor: pointer;
    padding-left: 20px;
    background: #eee url(../img/expanded.png) no-repeat 4px center;
    border: 1px solid #ccc;
}

form.post_editor dt.collapse_enabled:hover {
    background-color: #f2f2f2;
}

form.post_editor dt.collapsed {
    background: white url(../img/collapsed.png) no-repeat 0 center;
    border: 1px solid white;
}

form.post_editor dd.collapse_enabled {
    margin: 0;
    padding: 5px 10px 10px 10px;
}

div.preview_wrapper {
    border: 1px solid #ccc;
    margin: 10px 0 10px 0;
    padding: 10px 10px 0 10px;
}

div.preview_wrapper h2.title {
    margin: -10px -10px 10px -10px;
    font-family: 'Verdana', 'Deja-Vu Sans', 'Bitstream Vera Sans', sans-serif;
    text-align: center;
    font-weight: bold;
    background: #f5f1e6 url('../img/table-header.png') repeat-x;
    font-size: 1em;
    padding: 0.3em 0 0.4em 0;
    border-bottom: 1px solid #ccc;
    color: #673B1A;
}

/* mini pagination */
span.pagination .pageselect, div.pagination .ellipsis {
    background-color: white;
    padding: 2px;
    margin-left: 1px;
}

span.pagination span.comma {
    display: none;
}

span.pagination .pageselect {
    border: 1px solid #aaa;
    color: #555;
    text-decoration: none;
}

span.pagination .pageselect:hover {
    background: #555;
    color: white;
}

.reportlist_head {
background-color: #EEE;
}

/* Attachment styles */
dl.attachments {
  margin: 10px 0 10px 0;
  border: 1px solid #ccc;
}

dl.attachments dt {
  text-align: left;
  background: #f2f2f2 url('../img/table-header-alternative.png');
  color: #673B1A
  vertical-align: middle;
  border: 1px solid #ccc;
}

dl.attachments dd {
  padding-bottom: 0.3em;
  vertical-align: middle;
}

dl.attachments dd a img.preview {
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
}

ul.image_list {
  list-style: none;
}

ul.image_list li {
  display: inline;
  margin-bottom: 5px;
  padding: 0px;
}

ul.image_list a img {
  border: 1px solid #ccc;
  background-color: #f2f2f2;
  padding: 5px;
  margin: 0 10px;
}

ul.image_list a:hover img {
  border-color: #9d520f;
  background-color: #e5d0a7;
  opacity: 0.9;
}

div.code, pre {
    border: 1px solid #ccc;
    max-height: 15em;
    overflow: auto;
    margin: 0.5em 0 0 0;
}

div.code pre {
    max-height: none;
}

.codeblock_resizer {
    width: 10em;
    margin-left: auto;
    background: url(../img/expand-bar.png) #d6d6d6 bottom left repeat-x;
    border-width: 0 1px 0 1px;
    border-style: solid;
    border-color: #a8a8a8;
    cursor: pointer;
    text-align: center;
    font-weight: bold;
    padding: 0 0 0.2em 0;
    font-size: 0.9em;
}

